syntax = "proto2";

package Mrr;

import "./shaders.proto";

message MrModel {
  required string id = 1;
  required string name = 2;

  required MrTransform transform = 3;

  required MrShaderProgram shaderProgram = 4;
  required MrMesh mesh = 5;
}

message MrMesh {
  map<string, MrAttributeKey> attributeKeys = 1;
  required MrIndexBuffer indices = 2;
  map<string, MrVertexBuffer> vertices = 3;
}

message MrAttributeKey {
  required uint32 index = 1;
  required uint32 size = 2;
  required uint32 count = 3;
  required bool normalized = 4;
  required uint32 offset = 5;
  required uint32 stride = 6;
}

enum BufferTargetType {
  ARRAY_BUFFER = 0;
  ELEMENT_ARRAY_BUFFER = 1;
}

enum BufferUsageType {
  STATIC_DRAW = 0;
}

message MrIndexBuffer {
  required BufferTargetType targetBuffer = 1;
  required BufferUsageType usage = 2;
  required uint32 itemSize = 3;
  required uint32 count = 4;
  required bytes dataArray = 5;
}

message MrVertexBuffer {
  required BufferTargetType targetBuffer = 1;
  required BufferUsageType usage = 2;
  required uint32 itemSize = 3;
  required uint32 count = 4;
  required bytes dataArray = 5;
}
