syntax = "proto2";

package Mrr;

import "./math.proto";
import "./model.proto";

message ProtoMrObject {
  required string type = 1;

  optional MrGroup group = 2;
  optional MrModel model = 3;

  repeated ProtoMrObject children = 100;
}

message MrGroup {
  required string name = 1;

  required MrTransform transform = 3;
}
